--- a/additional_task_03/index.html
+++ b/additional_task_03/index.html
@@ -12,16 +12,16 @@
    </header>
    <main>
       <ul>
-         <li>text...</li>
-         <ul>
-               <li>text...</li>
-               <ol>
+         <li>text...
+            <ul>
+               <li>text...
+                  <ol>
                      <li>text...</li>
                      <li><span>text...</span></li>
                      <li>text...</li>
-               </ol>
+                </ol></li>
                <li><span>text...</span></li>
-         </ul>
+            </ul></li>
          <li>text...</li>
          <li>text...</li>
          <li>text...</li>
