--- a/lesson_04/index.html
+++ b/lesson_04/index.html
@@ -112,7 +112,7 @@
    </main>
 
    <footer>
-      <a href="#beginning">На початок сторінки</a>
+      <a  title="Перейти на початок сторінки" href="#beginning">На початок сторінки</a>
    </footer>
 </body>
 </html>
