--- a/lesson_04/index.html
+++ b/lesson_04/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="uk">
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 <body>
    <header>
       <div>
-         <img id="beginning" src="img/mavka.jpg" alt="Надпис_Мавка_з_дерева_на_блакитно-сірому_фоні_з_гілками_зеленого_листя">
+         <img id="beginning" src="img/mavka.jpg" alt="Надпис Мавка з дерева на блакитно-сірому фоні з гілками зеленого листя">
          <h1>МАВКА. ЛІСОВА ПІСНЯ</h1>
          <p>про проєкт</p>
 
@@ -71,27 +71,27 @@
          (USAID).</p>
 
          <h3 id="partners">ПАРТНЕРИ</h3>
-         <img src="img/partners_1.jpg" alt="Логотипи_музей_Івана_Гончара_та_Київський_національний_університет_імені_Тараса_Шевченка_із_зображенням_університету_на_темно-зеленому_фоні">
+         <img src="img/partners_1.jpg" alt="Логотипи музей Івана Гончара та Київський національний університет імені Тараса Шевченка із зображенням університету на темно-зеленому фоні">
          <P>Фахівці кафедри фольклористики Київського національного університету імені Тараса Шевченка (Олена Івановська, Олеся
          Наумовська, Олексій Доля) і Національного центру народної культури «Музей Івана Гончара» (Мирослава Вертюк, Петро
          Гончар) надають наукову підтримку в інтерпретації українських міфів, легенд, переказів та обрядів у Всесвіті Мавки.</P>
 
-         <img src="img/partners_2.jpg" alt="Логотип_NAVRO_з_двома_відзеркаленими_єдинорогами_зверху_на_темно-зеленому_фоні">
+         <img src="img/partners_2.jpg" alt="Логотип NAVRO з двома відзеркаленими єдинорогами зверху на темно-зеленому фоні">
          <p>Засновниця бренду NAVRO Ольга Навроцька виступила в ролі художника по костюмах. Вона створила оригінальний самобутній
          образ головної героїні анімаційного фільму, в якому переосмислила національний костюм. Образ Мавки від NAVRO отримав
          продовження в капсульній колекції MAVKA, до якої увійшли сукні, блузи та шарфи.</p>
 
-         <img src="img/partners_3.jpg" alt="Логотип_UKRAINE_INSTITUTE_OF_FASHION_HISTORY_в_прямокутниках_на_темно-зеленому_фоні">
+         <img src="img/partners_3.jpg" alt="Логотип UKRAINE INSTITUTE OF FASHION HISTORY в прямокутниках на темно-зеленому фоні">
          <p>Український Інститут Історії Моди (Марія Квітка) консультував творчу групу з питань, пов'язаних із традиційним костюмом.
          Інститут допомагав отримати доступ до автентичних речей з приватних колекцій, елементи і деталі яких доповнюють
          оригінальні образи персонажів мультфільму.</p>
 
-         <img src="img/partners_4.jpg" alt="Логотип_PUBLISHING_BOOK_HOUSE_KIEV_із_зобращенням_чотирьох_письменників_на_темно-зеленому_фоні">
+         <img src="img/partners_4.jpg" alt="Логотип PUBLISHING BOOK HOUSE KIEV із зобращенням чотирьох письменників на темно-зеленому фоні">
          <p>За підтримки видавництва «Київський Будинок Книги» вийшла книжкова серія, присвячена проєкту. У серію включили
          перевидання класичної драми-феєрії Лесі Українки «Лісова пісня» українською та англійською мовами в кінообкладинці,
          адаптоване видання поеми для дітей з ілюстраціями з анімаційного проекту і скетчбук з героями фільму.</p>
 
-         <img src="img/partners_5.jpg" alt="Логотип_WWF_та_чорно-біла_панда_на_темно-зеленому_фоні">
+         <img src="img/partners_5.jpg" alt="Логотип WWF та чорно-біла панда на темно-зеленому фоні">
          <p>Фахівці Всесвітнього фонду дикої природи в Україні (WWF) надають експертну підтримку в питаннях флори і фауни Поліського
          краю. Представництво WWF також виступило співорганізатором всеукраїнської довгострокової благодійної акції «Врятуємо
          рись!». Мета акції полягає в тому, щоб привернути увагу до проблеми зникаючих видів флори і фауни України і підтримати
@@ -101,13 +101,15 @@
       <div>
          <h3>Maecenas lacinia felis nec placerat sollicitudin. Quisque placerat dolor at scelerisque imperdiet. Phasellus tristique
          felis dolor.</h3>
-         <p>Maecenas elementum in risus sed condimentum. Duis convallis ante ac tempus maximus. Fusce malesuada sed velit ut dictum.
-         Morbi faucibus vitae orci at euismod. Integer auctor augue in erat vehicula, quis fermentum ex finibus.</p>
-         <p>Mauris pretium elit a dui pulvinar, in ornare sapien euismod. Nullam interdum nisl ante, id feugiat quam euismod
-         commodo. Sed ultrices lectus ut iaculis rhoncus. Aenean non dignissim justo, at fermentum turpis. Sed molestie, ligula
-         ut molestie ultrices, tellus ligula viverra neque, malesuada consectetur diam sapien volutpat risus.
-         Quisque eget tortor lobortis, facilisis metus eu, elementum est. Nunc sit amet erat quis ex convallis suscipit. ur
-         ridiculus mus.</p>
+         <div>
+            <p>Maecenas elementum in risus sed condimentum. Duis convallis ante ac tempus maximus. Fusce malesuada sed velit ut dictum.
+            Morbi faucibus vitae orci at euismod. Integer auctor augue in erat vehicula, quis fermentum ex finibus.</p>
+            <p>Mauris pretium elit a dui pulvinar, in ornare sapien euismod. Nullam interdum nisl ante, id feugiat quam euismod
+            commodo. Sed ultrices lectus ut iaculis rhoncus. Aenean non dignissim justo, at fermentum turpis. Sed molestie, ligula
+            ut molestie ultrices, tellus ligula viverra neque, malesuada consectetur diam sapien volutpat risus.
+            Quisque eget tortor lobortis, facilisis metus eu, elementum est. Nunc sit amet erat quis ex convallis suscipit. ur
+            ridiculus mus.</p>
+         </div>
       </div>
    </main>
 
