--- a/lesson_06/index.html
+++ b/lesson_06/index.html
@@ -19,13 +19,15 @@
                commodo quis, egestas elementum leo. Donec convallis mollis enim. Aliquam id mi quam. Phasellus nec fringilla elit.</p>
                <p>Nulla mauris tellus, feugiat quis pharetra sed, gravida ac dui. Sed iaculis, metus faucibus elementum tincidunt, turpis
                mi viverra velit, pellentesque tristique neque mi eget nulla. Proin luctus elementum neque et pharetra.</p>
-               <div class="list">
-                  <ul>
-                     <li><p class="circle"><img src="img/check.png" alt=""></p>100 g of fresh leaves provides.</li><br>
-                     <li><p class="circle"><img src="img/check.png" alt=""></p>Aliquam ac est at augue volutpat elementum.</li><br>
-                     <li><p class="circle"><img src="img/check.png" alt=""></p>Quisque nec enim eget sapien molestie.</li><br>
-                     <li><p class="circle"><img src="img/check.png" alt=""></p>Proin convallis odio volutpat finibus posuere.</li>
-                  </ul>
+               <div>
+                  <div class="list">
+                     <ul>
+                        <li><p class="circle"><img src="img/check.png" alt=""></p>100 g of fresh leaves provides.</li>
+                        <li><p class="circle"><img src="img/check.png" alt=""></p>Aliquam ac est at augue volutpat elementum.</li>
+                        <li><p class="circle"><img src="img/check.png" alt=""></p>Quisque nec enim eget sapien molestie.</li>
+                        <li><p class="circle"><img src="img/check.png" alt=""></p>Proin convallis odio volutpat finibus posuere.</li>
+                     </ul>
+                  </div>
                </div>
                <p>Cras et diam maximus, accumsan sapien et, sollicitudin velit. Nulla blandit eros non turpis lobortis iaculis at ut
                massa.</p>
